# oot3d

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  prepare.bat
data/: checksum.md5  oot3d.ld
disassembly/: CMakeLists.txt
src/functions/: functions_3E0000s.cpp
src/game/actors/Bg_Spot01_Fusya/: z_bg_spot01_fusya.cpp  z_bg_spot01_fusya.hpp
src/game/actors/Bg_Spot01_Idosoko/: z_bg_spot01_idosoko.cpp  z_bg_spot01_idosoko.hpp
tools/: ctx.py  progress.py
